// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HolidayRequestPage should render in loading state 1`] = `<WithStyles(LoadingPage) />`;

exports[`HolidayRequestPage should render not found 1`] = `<WithStyles(NotFound) />`;

exports[`HolidayRequestPage should render other's holiday request 1`] = `
<WithStyles(Card)>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Demande de congé de james bond
       | 
      MyLV
    </title>
  </HelmetWrapper>
  <WithStyles(CardContent)>
    <div>
      <WithStyles(Typography)
        component="h2"
        gutterBottom={true}
        variant="h5"
      >
        Demande de congé de james bond
      </WithStyles(Typography)>
      <HolidayRequestStatusIcon
        status="pending"
      />
    </div>
    <WithStyles(Typography)
      component="p"
      gutterBottom={true}
    >
      world
    </WithStyles(Typography)>
    <WithStyles(List)>
      <WithStyles(ListSubheader)>
        Période(s) demandée(s)
      </WithStyles(ListSubheader)>
      <WithStyles(ListItem)
        key="qux"
      >
        <WithStyles(Avatar)>
          <pure(BeachAccessIcon) />
        </WithStyles(Avatar)>
        <WithStyles(ListItemText)
          primary="Du 01/01/2012 au 02/01/2012 (42 jours)"
          secondary="Congés payés"
        />
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(CardContent)>
  <Restricted
    roles={
      Array [
        "hr",
      ]
    }
    user={
      Object {
        "id": "foo",
      }
    }
  >
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        key="approved"
        onClick={[Function]}
        size="small"
      >
        Approuver
      </WithStyles(Button)>
      <WithStyles(Button)
        color="default"
        key="rejected"
        onClick={[Function]}
        size="small"
      >
        Refuser
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </Restricted>
</WithStyles(Card)>
`;

exports[`HolidayRequestPage should render properly 1`] = `
<WithStyles(Card)>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      hello
       | 
      MyLV
    </title>
  </HelmetWrapper>
  <WithStyles(CardContent)>
    <div>
      <WithStyles(Typography)
        component="h2"
        gutterBottom={true}
        variant="h5"
      >
        hello
      </WithStyles(Typography)>
      <HolidayRequestStatusIcon
        status="pending"
      />
    </div>
    <WithStyles(Typography)
      component="p"
      gutterBottom={true}
    >
      world
    </WithStyles(Typography)>
    <WithStyles(List)>
      <WithStyles(ListSubheader)>
        Période(s) demandée(s)
      </WithStyles(ListSubheader)>
      <WithStyles(ListItem)
        key="qux"
      >
        <WithStyles(Avatar)>
          <pure(BeachAccessIcon) />
        </WithStyles(Avatar)>
        <WithStyles(ListItemText)
          primary="Du 01/01/2012 au 02/01/2012 (42 jours)"
          secondary="Congés payés"
        />
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(CardContent)>
  <Restricted
    roles={
      Array [
        "hr",
      ]
    }
    user={
      Object {
        "id": "foo",
      }
    }
  >
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="primary"
        key="approved"
        onClick={[Function]}
        size="small"
      >
        Approuver
      </WithStyles(Button)>
      <WithStyles(Button)
        color="default"
        key="rejected"
        onClick={[Function]}
        size="small"
      >
        Refuser
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </Restricted>
</WithStyles(Card)>
`;

exports[`HolidayRequestPage should render with reopen button if not pending 1`] = `
<WithStyles(Card)>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      hello
       | 
      MyLV
    </title>
  </HelmetWrapper>
  <WithStyles(CardContent)>
    <div>
      <WithStyles(Typography)
        component="h2"
        gutterBottom={true}
        variant="h5"
      >
        hello
      </WithStyles(Typography)>
      <HolidayRequestStatusIcon
        status="approved"
      />
    </div>
    <WithStyles(Typography)
      component="p"
      gutterBottom={true}
    >
      world
    </WithStyles(Typography)>
    <WithStyles(List)>
      <WithStyles(ListSubheader)>
        Période(s) demandée(s)
      </WithStyles(ListSubheader)>
      <WithStyles(ListItem)
        key="qux"
      >
        <WithStyles(Avatar)>
          <pure(BeachAccessIcon) />
        </WithStyles(Avatar)>
        <WithStyles(ListItemText)
          primary="Du 01/01/2012 au 02/01/2012 (42 jours)"
          secondary="Congés payés"
        />
      </WithStyles(ListItem)>
    </WithStyles(List)>
  </WithStyles(CardContent)>
  <Restricted
    roles={
      Array [
        "hr",
      ]
    }
    user={
      Object {
        "id": "foo",
      }
    }
  >
    <WithStyles(CardActions)>
      <WithStyles(Button)
        color="default"
        onClick={[Function]}
        size="small"
      >
        Réouvrir pour édition
      </WithStyles(Button)>
    </WithStyles(CardActions)>
  </Restricted>
</WithStyles(Card)>
`;
